[package]
edition = "2021"
name = "kaishens_cn_snowflake"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = ["napi4", "compat-mode"] }
napi-derive = "2.11.0"
anyhow = "1.0.69"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
